--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dev_dependencies:
   easy_refresh: ^3.3.2+1
   date_format: ^2.0.7
   carousel_slider: ^4.2.1
+  shared_preferences: ^2.2.1
 
   fluttertoast: ^8.2.4
 
